kubernetes/monitoring/grafana/httpproxy-grafana.yml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: grafana
  namespace: monitoring
spec:
  virtualhost:
    fqdn: grafana.domain.tld
  routes:
  - conditions:
    - prefix: /
    services:
    - name: grafana
      port: 80
