kubernetes/monitoring/grafana/ingress-grafana.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: grafana.domain.tld
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 80
